syntax = "proto3";

option java_package = "mega.triple.aaa.data.proto";
option java_multiple_files = true;

message LocationProto {
  ContinentProto continent = 1;
  CountryProto country = 2;
  CityProto city = 3;
}

message ContinentProto {
  string id = 1;
  string english_name = 2;
  string localized_name = 3;
}

message CountryProto {
  string id = 1;
  string continent_id = 2;
  string english_name = 3;
  string localized_name = 4;
}

message CityProto {
  string id = 1;
  string country_id = 2;
  string english_name = 3;
  string english_type = 4;
  int32 level = 5;
  string localized_name = 6;
  string localized_type = 7;
}
